# Ollama_monitor

./: .dockerignore  .pre-commit-config.yaml  CHANGELOG.md  CONTRIBUTING.md  Dockerfile  README.md  USAGE_EXAMPLES.md  alerting.py  config.example.yaml  config.yaml  config_validator.py  docker-compose.yml  logger_config.py  ollama_monitor.py  prometheus.yml  pyproject.toml  report_generator.py  requirements-dev.txt  requirements.txt  stop-ollama-model.bat
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml
docs/: ARCHITECTURE.md
k8s/: README.md  configmap.yaml  deployment.yaml  service.yaml  servicemonitor.yaml
tests/: conftest.py  test_integrations.py  test_ollama_monitor.py
