[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "ollama-monitor"
version = "1.1.0"
description = "A comprehensive monitoring tool for Ollama AI model servers"
readme = "README.md"
requires-python = ">=3.12"
license = {text = "MIT"}
authors = [
    {name = "Ollama Monitor Contributors"}
]
keywords = ["ollama", "monitoring", "ai", "prometheus", "health-check"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
    "Topic :: System :: Monitoring",
]

dependencies = [
    "httpx==0.27.2",
    "pyyaml==6.0.2",
    "prometheus_client==0.21.0",
    "aiofiles==23.1.0",
    "python-dotenv==1.0.0",
    "pydantic==2.5.3",
    "pydantic-settings==2.1.0",
    "jinja2==3.1.6",
]

[project.optional-dependencies]
dev = [
    "pytest==7.4.3",
    "pytest-asyncio==0.21.1",
    "pytest-cov==4.1.0",
    "pytest-mock==3.12.0",
    "pylint==3.0.3",
    "black==23.12.1",
    "mypy==1.8.0",
    "isort==5.13.2",
    "pre-commit==3.6.0",
    "types-PyYAML==6.0.12.12",
    "types-aiofiles==23.2.0.0",
]

[project.urls]
Homepage = "https://github.com/Xza85hrf/Ollama_monitor"
Repository = "https://github.com/Xza85hrf/Ollama_monitor"
Issues = "https://github.com/Xza85hrf/Ollama_monitor/issues"

[project.scripts]
ollama-monitor = "ollama_monitor:main"

[tool.black]
line-length = 100
target-version = ['py312']
include = '\.pyi?$'
exclude = '''
/(
    \.git
  | \.venv
  | build
  | dist
)/
'''

[tool.isort]
profile = "black"
line_length = 100
multi_line_output = 3
include_trailing_comma = true

[tool.mypy]
python_version = "3.12"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false
disallow_incomplete_defs = false
check_untyped_defs = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true

[[tool.mypy.overrides]]
module = "prometheus_client.*"
ignore_missing_imports = true

[tool.pylint.main]
disable = [
    "C0103",  # Invalid name
    "C0301",  # Line too long (handled by black)
    "R0913",  # Too many arguments
    "R0914",  # Too many local variables
]

[tool.pytest.ini_options]
minversion = "7.0"
addopts = "-ra -q --strict-markers"
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
asyncio_mode = "auto"

[tool.coverage.run]
source = ["."]
omit = ["tests/*", ".venv/*", "setup.py"]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise AssertionError",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
    "if TYPE_CHECKING:",
]
